--- a/src/Javinizer/jvSettings.json
+++ b/src/Javinizer/jvSettings.json
@@ -1,7 +1,7 @@
 {
-  "throttlelimit": 3,
-  "location.input": "",
-  "location.output": "",
+  "throttlelimit": 2,
+  "location.input": "/3od/temp",
+  "location.output": "/3od/temp-out",
   "location.thumbcsv": "",
   "location.genrecsv": "",
   "location.uncensorcsv": "",
@@ -14,15 +14,15 @@
   "scraper.movie.dmmja": true,
   "scraper.movie.jav321ja": false,
   "scraper.movie.javbus": false,
-  "scraper.movie.javbusja": false,
+  "scraper.movie.javbusja": true,
   "scraper.movie.javbuszh": false,
   "scraper.movie.javdb": false,
   "scraper.movie.javdbzh": false,
-  "scraper.movie.javlibrary": true,
-  "scraper.movie.javlibraryja": false,
+  "scraper.movie.javlibrary": false,
+  "scraper.movie.javlibraryja": true,
   "scraper.movie.javlibraryzh": false,
-  "scraper.movie.mgstageja": false,
-  "scraper.movie.r18": true,
+  "scraper.movie.mgstageja": true,
+  "scraper.movie.r18": false,
   "scraper.movie.r18zh": false,
   "scraper.movie.tokyohot": false,
   "scraper.movie.tokyohotja": false,
@@ -42,7 +42,10 @@
     ".rmvb",
     ".wmv"
   ],
-  "match.excludedfilestring": ["^.*-trailer*", "^.*-5\\."],
+  "match.excludedfilestring": [
+    "^.*-trailer*",
+    "^.*-5\\."
+  ],
   "match.regex": false,
   "match.regex.string": "([a-zA-Z|tT28]+-\\d+[zZ]?[eE]?)(?:-pt)?(\\d{1,2})?",
   "match.regex.idmatch": 1,
@@ -50,7 +53,7 @@
   "sort.movetofolder": true,
   "sort.renamefile": true,
   "sort.renamefolderinplace": false,
-  "sort.maxtitlelength": 100,
+  "sort.maxtitlelength": 50,
   "sort.movesubtitles": false,
   "sort.create.nfo": true,
   "sort.create.nfoperfile": true,
@@ -63,9 +66,9 @@
   "sort.format.groupactress": true,
   "sort.format.delimiter": ", ",
   "sort.format.file": "<ID>",
-  "sort.format.folder": "<ID> [<STUDIO>] - <TITLE> (<YEAR>)",
-  "sort.format.outputfolder": "",
-  "sort.format.posterimg": ["folder"],
+  "sort.format.folder": "<ID> - <TITLE> (<YEAR>)",
+  "sort.format.outputfolder": "<ACTORS>",
+  "sort.format.posterimg": "folder",
   "sort.format.thumbimg": "fanart",
   "sort.format.trailervid": "<ID>-trailer",
   "sort.format.nfo": "<ID>",
@@ -80,12 +83,12 @@
   "sort.metadata.nfo.translate": false,
   "sort.metadata.nfo.translate.module": "googletrans",
   "sort.metadata.nfo.translate.field": "description",
-  "sort.metadata.nfo.translate.language": "en",
+  "sort.metadata.nfo.translate.language": "ja",
   "sort.metadata.nfo.translate.deeplapikey": "",
   "sort.metadata.nfo.translate.keeporiginaldescription": false,
   "sort.metadata.nfo.displayname": "[<ID>] <TITLE>",
   "sort.metadata.nfo.firstnameorder": false,
-  "sort.metadata.nfo.actresslanguageja": false,
+  "sort.metadata.nfo.actresslanguageja": true,
   "sort.metadata.nfo.unknownactress": true,
   "sort.metadata.nfo.originalpath": false,
   "sort.metadata.nfo.actressastag": false,
@@ -108,6 +111,7 @@
   ],
   "sort.metadata.requiredfield": [
     "id",
+    "contentid",
     "coverurl",
     "genre",
     "maker",
@@ -115,95 +119,124 @@
     "title"
   ],
   "sort.metadata.priority.actress": [
-    "javlibrary",
-    "r18",
-    "javbus",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
-  "sort.metadata.priority.alternatetitle": ["javlibraryja", "dmmja"],
+  "sort.metadata.priority.alternatetitle": [
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
+  ],
   "sort.metadata.priority.coverurl": [
-    "r18",
-    "javlibrary",
-    "dmmja",
-    "javbus",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
   "sort.metadata.priority.description": [
-    "r18",
-    "dmmja",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
   "sort.metadata.priority.director": [
-    "javlibrary",
-    "r18",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
   "sort.metadata.priority.genre": [
-    "javlibrary",
-    "r18",
-    "javbus",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
   "sort.metadata.priority.id": [
-    "javlibrary",
-    "r18",
-    "javbus",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
-  "sort.metadata.priority.contentid": ["r18", "dmmja"],
+  "sort.metadata.priority.contentid": [
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
+  ],
   "sort.metadata.priority.label": [
-    "javlibrary",
-    "r18",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
   "sort.metadata.priority.maker": [
-    "javlibrary",
-    "r18",
-    "javbus",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
   "sort.metadata.priority.releasedate": [
-    "javlibrary",
-    "r18",
-    "dmmja",
-    "javbus",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
-  "sort.metadata.priority.rating": ["dmmja", "javlibrary", "mgstageja"],
+  "sort.metadata.priority.rating": [
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
+  ],
   "sort.metadata.priority.runtime": [
-    "javlibrary",
-    "r18",
-    "dmmja",
-    "javbus",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
-  "sort.metadata.priority.series": ["r18", "r18zh", "mgstageja"],
+  "sort.metadata.priority.series": [
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
+  ],
   "sort.metadata.priority.screenshoturl": [
-    "r18",
-    "javlibrary",
-    "dmmja",
-    "javbus",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
   "sort.metadata.priority.title": [
-    "r18",
-    "javlibrary",
-    "javbus",
-    "mgstageja",
-    "aventertainment"
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
   ],
-  "sort.metadata.priority.trailerurl": ["r18", "dmmja"],
+  "sort.metadata.priority.trailerurl": [
+    "javlibraryja",
+    "DmmJa",
+    "MGStageJa",
+    "JavbusJa",
+    "AVEntertainmentJa"
+  ],
   "emby.url": "http://192.168.0.1:8096",
   "emby.apikey": "",
   "javlibrary.baseurl": "http://www.javlibrary.com",
@@ -220,29 +253,29 @@
   "proxy.password": "",
   "web.favorites.genre": [],
   "web.favorites.tag": [],
-  "web.sort.recurse": false,
+  "web.sort.recurse": true,
   "web.sort.strict": false,
   "web.sort.interactive": true,
   "web.sort.update": false,
   "web.sort.force": false,
   "web.sort.preview": false,
-  "web.sort.recursedepth": 0,
+  "web.sort.recursedepth": 5,
   "web.sort.confirm": false,
   "web.sort.manualsearch.aventertainment": false,
   "web.sort.manualsearch.aventertainmentja": false,
   "web.sort.manualsearch.dmm": false,
-  "web.sort.manualsearch.dmmja": true,
+  "web.sort.manualsearch.dmmja": false,
   "web.sort.manualsearch.jav321ja": false,
   "web.sort.manualsearch.javbus": false,
   "web.sort.manualsearch.javbusja": false,
   "web.sort.manualsearch.javbuszh": false,
   "web.sort.manualsearch.javdb": false,
   "web.sort.manualsearch.javdbzh": false,
-  "web.sort.manualsearch.javlibrary": true,
+  "web.sort.manualsearch.javlibrary": false,
   "web.sort.manualsearch.javlibraryja": false,
   "web.sort.manualsearch.javlibraryzh": false,
   "web.sort.manualsearch.mgstageja": false,
-  "web.sort.manualsearch.r18": true,
+  "web.sort.manualsearch.r18": false,
   "web.sort.manualsearch.r18zh": false,
   "web.theme": "light",
   "admin.log": true,
